@@ -1,33 +1,36 @@
 package io.kestra.core.runners;
 
 import com.google.common.collect.ImmutableMap;
+import io.kestra.core.exceptions.IllegalVariableEvaluationException;
 import io.kestra.core.models.Label;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.executions.TaskRun;
 import io.kestra.core.models.flows.Flow;
+import io.kestra.core.models.flows.FlowInterface;
 import io.kestra.core.models.flows.Input;
 import io.kestra.core.models.flows.State;
 import io.kestra.core.models.flows.input.SecretInput;
+import io.kestra.core.models.property.PropertyContext;
 import io.kestra.core.models.tasks.Task;
 import io.kestra.core.models.triggers.AbstractTrigger;
 import io.kestra.core.utils.ListUtils;
+import io.kestra.plugin.core.trigger.Schedule;
 import lombok.AllArgsConstructor;
 import lombok.With;
 
 import java.security.GeneralSecurityException;
-import java.util.AbstractMap;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 /**
  * Class for building {@link RunContext} variables.
  */
 public final class RunVariables {
     public static final String SECRET_CONSUMER_VARIABLE_NAME = "addSecretConsumer";
+    public static final String FIXTURE_FILES_KEY = "io.kestra.datatype:test_fixtures_files";
 
     /**
      * Creates an immutable map representation of the given {@link Task}.
@@ -75,10 +78,10 @@ public final class RunVariables {
      * @param flow The flow from which to create variables.
      * @return a new immutable {@link Map}.
      */
-    static Map<String, Object> of(final Flow flow) {
+    static Map<String, Object> of(final FlowInterface flow) {
         ImmutableMap.Builder<String, Object> builder = ImmutableMap.builder();
         builder.put("id", flow.getId())
-               .put("namespace", flow.getNamespace());
+            .put("namespace", flow.getNamespace());
 
         Optional.ofNullable(flow.getRevision())
             .ifPresent(revision ->  builder.put("revision", revision));
@@ -96,7 +99,7 @@ public final class RunVariables {
      * @return a new immutable {@link Map}.
      */
     static Map<String, Object> of(final AbstractTrigger trigger) {
-        return ImmutableMap.of(
+        return Map.of(
             "id", trigger.getId(),
             "type", trigger.getType()
         );
@@ -107,7 +110,7 @@ public final class RunVariables {
      */
     public interface Builder {
 
-        Builder withFlow(Flow flow);
+        Builder withFlow(FlowInterface flow);
 
         Builder withInputs(Map<String, Object> inputs);
 
@@ -129,14 +132,18 @@ public final class RunVariables {
 
         Builder withSecretInputs(List<String> secretInputs);
 
+        Builder withKestraConfiguration(KestraConfiguration kestraConfiguration);
+
         /**
          * Builds the immutable map of run variables.
          *
          * @param logger    The {@link RunContextLogger logger}
          * @return          The immutable map of variables.
          */
-        Map<String, Object> build(final RunContextLogger logger);
+        Map<String, Object> build(RunContextLogger logger, PropertyContext propertyContext);
     }
+
+    public record KestraConfiguration(String environment, String url) { }
 
     /**
      * Default builder class for constructing variables.
@@ -145,7 +152,7 @@ public final class RunVariables {
     @With
     public static class DefaultBuilder implements RunVariables.Builder {
 
-        protected Flow flow;
+        protected FlowInterface flow;
         protected Task task;
         protected Execution execution;
         protected TaskRun taskRun;
@@ -157,6 +164,7 @@ public final class RunVariables {
         protected Map<?, ?> globals;
         private final Optional<String> secretKey;
         private List<String> secretInputs;
+        private KestraConfiguration kestraConfiguration;
 
         public DefaultBuilder() {
             this(Optional.empty());
@@ -166,8 +174,9 @@ public final class RunVariables {
             this.secretKey = secretKey;
         }
 
+        // Note: for performance reason, cloning maps should be avoided as much as possible.
         @Override
-        public Map<String, Object> build(final RunContextLogger logger) {
+        public Map<String, Object> build(final RunContextLogger logger, final PropertyContext propertyContext) {
             ImmutableMap.Builder<String, Object> builder = ImmutableMap.builder();
 
             builder.put("envs", envs != null ? envs : Map.of());
@@ -176,9 +185,6 @@ public final class RunVariables {
             // Flow
             if (flow != null) {
                 builder.put("flow", RunVariables.of(flow));
-                if (flow.getVariables() != null) {
-                    builder.put("vars", flow.getVariables());
-                }
             }
 
             // Task
@@ -211,16 +217,24 @@ public final class RunVariables {
 
                 executionMap.put("id", execution.getId());
 
+                if (execution.getState() != null) { // can occur in tests
+                    executionMap.put("state", execution.getState().getCurrent());
+                }
+
                 Optional.ofNullable(execution.getState()).map(State::getStartDate)
                     .ifPresent(startDate -> executionMap.put("startDate", startDate));
 
                 Optional.ofNullable(execution.getOriginalId())
                     .ifPresent(originalId -> executionMap.put("originalId", originalId));
 
+                if (execution.getOutputs() != null) {
+                    executionMap.put("outputs", execution.getOutputs());
+                }
+
                 builder.put("execution", executionMap.build());
 
                 if (execution.getTaskRunList() != null) {
-                    Map<String, Object> outputs = new HashMap<>(execution.outputs());
+                    Map<String, Object> outputs = execution.outputs();
                     if (decryptVariables) {
                         final Secret secret = new Secret(secretKey, logger);
                         outputs = secret.decrypt(outputs);
@@ -235,11 +249,14 @@ public final class RunVariables {
                                 tasksMap.put(taskRun.getTaskId(), Map.of("state", taskRun.getState().getCurrent()));
                             } else {
                                 if (tasksMap.containsKey(taskRun.getTaskId())) {
-                                    Map<String, Object> taskRunMap = new HashMap<>((Map<String, Object>) tasksMap.get(taskRun.getTaskId()));
+                                    @SuppressWarnings("unchecked")
+                                    Map<String, Object> taskRunMap = (Map<String, Object>) tasksMap.get(taskRun.getTaskId());
                                     taskRunMap.put(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent()));
                                     tasksMap.put(taskRun.getTaskId(), taskRunMap);
                                 } else {
-                                    tasksMap.put(taskRun.getTaskId(), Map.of(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent())));
+                                    Map<String, Object> taskRunMap = new HashMap<>();
+                                    taskRunMap.put(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent()));
+                                    tasksMap.put(taskRun.getTaskId(), taskRunMap);
                                 }
                             }
                         }
@@ -256,23 +273,27 @@ public final class RunVariables {
                         // if some inputs are of type secret, we decode them
                         final Secret secret = new Secret(secretKey, logger);
                         for (Input<?> input : flow.getInputs()) {
-                            if (input instanceof SecretInput && inputs.containsKey(input.getId())) {
-                                try {
-                                    String decoded = secret.decrypt(((String) inputs.get(input.getId())));
-                                    inputs.put(input.getId(), decoded);
-                                } catch (GeneralSecurityException e) {
-                                    throw new RuntimeException(e);
-                                }
+                            if (input instanceof SecretInput) {
+                                decodeInput(secret, input.getId(), inputs);
                             }
                         }
                     }
                 }
 
                 if (flow != null && flow.getInputs() != null) {
+                    // Create a new PropertyContext with 'flow' variables which are required by some pebble expressions.
+                    PropertyContextWithVariables context = new PropertyContextWithVariables(propertyContext, Map.of("flow", RunVariables.of(flow)));
+                    
                     // we add default inputs value from the flow if not already set, this will be useful for triggers
                     flow.getInputs().stream()
                         .filter(input -> input.getDefaults() != null && !inputs.containsKey(input.getId()))
-                        .forEach(input -> inputs.put(input.getId(), input.getDefaults()));
+                        .forEach(input -> {
+                            try {
+                                inputs.put(input.getId(), FlowInputOutput.resolveDefaultValue(input, context));
+                            } catch (IllegalVariableEvaluationException e) {
+                                // Silent catch, if an input depends on another input, or a variable that is populated at runtime / input filling time, we can't resolve it here.
+                            }
+                        });
                 }
 
                 if (!inputs.isEmpty()) {
@@ -291,20 +312,17 @@ public final class RunVariables {
 
                 if (execution.getTrigger() != null && execution.getTrigger().getVariables() != null) {
                     builder.put("trigger", execution.getTrigger().getVariables());
+
+                    // temporal hack to add back the `schedule`variables
+                    // will be removed in 2.0
+                    if (Schedule.class.getName().equals(execution.getTrigger().getType())) {
+                        // add back its variables inside the `schedule` variables
+                        builder.put("schedule", execution.getTrigger().getVariables());
+                    }
                 }
 
                 if (execution.getLabels() != null) {
-                    builder.put("labels", execution.getLabels()
-                        .stream()
-                        .filter(label -> label.value() != null && label.key() != null)
-                        .map(label -> mapLabel(label))
-                        // using an accumulator in case labels with the same key exists: the first is kept
-                        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (first, second) -> first))
-                    );
-                }
-
-                if (execution.getVariables() != null) {
-                    builder.putAll(execution.getVariables());
+                    builder.put("labels", Label.toNestedMap(execution.getLabels()));
                 }
 
                 if (flow == null) {
@@ -318,6 +336,32 @@ public final class RunVariables {
                 }
             }
 
+            // variables
+            Optional.ofNullable(execution)
+                .map(Execution::getVariables)
+                .or(() -> Optional.ofNullable(flow).map(FlowInterface::getVariables))
+                .map(HashMap::new)
+                .ifPresent(variables -> {
+                    Object fixtureFiles = variables.remove(FIXTURE_FILES_KEY);
+                    builder.put("vars", ImmutableMap.copyOf(variables));
+
+                    if (fixtureFiles != null) {
+                        builder.put("files", fixtureFiles);
+                    }
+                });
+
+            // Kestra configuration
+            if (kestraConfiguration != null) {
+                Map<String, String> kestra = HashMap.newHashMap(2);
+                if (kestraConfiguration.environment() != null) {
+                    kestra.put("environment", kestraConfiguration.environment());
+                }
+                if (kestraConfiguration.url() != null) {
+                    kestra.put("url", kestraConfiguration.url());
+                }
+                builder.put("kestra", kestra);
+            }
+
             // adds any additional variables
             if (variables != null) {
                 builder.putAll(variables);
@@ -329,24 +373,40 @@ public final class RunVariables {
 
             return builder.build();
         }
-    }
 
-    private static Map.Entry<String, Object> mapLabel(Label label) {
-        if (label.key().startsWith(Label.SYSTEM_PREFIX)) {
-            return Map.entry(
-                label.key().substring(0, Label.SYSTEM_PREFIX.length() - 1),
-                Map.entry(
-                    label.key().substring(Label.SYSTEM_PREFIX.length()),
-                    label.value()
-                )
-            );
-        } else {
-            return Map.entry(
-                label.key(),
-                label.value()
-            );
+        @SuppressWarnings("unchecked")
+        private void decodeInput(Secret secret, String id, Map<String, Object> inputs) {
+            // find the input value that can be nested in case the input has a '.' in it.
+            if (id.indexOf('.') > -1) {
+                String nestedId = id.substring(0, id.indexOf('.'));
+                String restOfId = id.substring(id.indexOf('.') + 1);
+                decodeInput(secret, restOfId, (Map<String, Object>) inputs.get(nestedId));
+            } else if (inputs.containsKey(id)) {
+                try {
+                    String decoded = secret.decrypt(((String) inputs.get(id)));
+                    inputs.put(id, decoded);
+                } catch (GeneralSecurityException e) {
+                    throw new RuntimeException(e);
+                }
+            }
         }
     }
 
     private RunVariables(){}
+    
+    private record PropertyContextWithVariables(
+        PropertyContext delegate,
+        Map<String, Object> variables
+    ) implements PropertyContext {
+        
+        @Override
+        public String render(String inline, Map<String, Object> variables) throws IllegalVariableEvaluationException {
+            return delegate.render(inline, variables.isEmpty() ? this.variables : variables);
+        }
+        
+        @Override
+        public Map<String, Object> render(Map<String, Object> inline, Map<String, Object> variables) throws IllegalVariableEvaluationException {
+            return delegate.render(inline, variables.isEmpty() ? this.variables : variables);
+        }
+    }
 }
